CC and bug-squash

--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -30,5 +30,5 @@
 
 .Header_score {
   display: flex;
-  flex-wrap: row nowrap;
+  flex-flow: row nowrap;
 }
